syntax = "proto3";

import "google/protobuf/empty.proto";

package config.v1;

// Kind of the configs.
enum EntryKind {
	UNKNOWN = 0;
	KAFKA = 1;
}

message ListConfigsRequest {
	// Specifies the kind of the entry to fetch.
	EntryKind kind = 1;
	
	// The maximum number of items to return.
	int32 page_size = 2;
	
	// The next_page_token value returned from a previous List request, if any.
	string page_token = 3;
}

message ListConfigsResponse {
	// A paginated list of configs. There will be a maximum number of 
	// items returned based on the page_size field in the request.
	repeated Config configs = 1;
	
	// Token to retrieve the next page of results, or empty if there are no
	// more results in the list.
	string next_page_token = 2;
}

message GetConfigRequest {
	// Specifies the unique identifier of the config to get.
	int64 id = 1;
	
	// Specifies the kind of the entry to fetch.
	EntryKind kind = 2;
}

message CreateConfigRequest {
	// Specifies the kind of the config to create.
	EntryKind kind = 1;
	
	// Specifies the name of the config to create. 
	// The name of the config config must be global.
	string name = 2;
	
	// Specifies configuration metadatas. 
	// Key-Value pairs depend on the EntryKind.
	map<string, string> metadata = 3;
}

message UpdateConfigRequest {
	// Specifies the unique identifier of the config to update.
	int64 id = 1;

	// Specifies the kind of the entry to update.
	EntryKind kind = 2;
	
	// Specifies configuration metadatas. 
	// Key-Value pairs depend on the EntryKind.
	map<string, string> metadata = 3;
}

message DeleteConfigRequest {
	// Specifies the id of the config to delete.
	int64 id = 1;

	// Specifies the kind of the entry to update.
	EntryKind kind = 2;
}

// The configuration for a service with the given name.
message Config {
	// Specifies the config's unique identifier.
	int64 id = 1;

	// Specifies the kind of the config.
	EntryKind kind = 2;
	
	// Specifies the kind of the config.
	string name = 3;
	
	// Specifies the Metadate of the config.
	map<string, string> metadata = 4;
	
	// Specifies the create time of the config.
	uint64 created_at = 5;
	
	// Specifies the modify time of the config.
	uint64 updated_at = 6;
}

service Configurations {
	rpc ListConfigs (ListConfigsRequest) returns (ListConfigsResponse);
	rpc GetConfig (GetConfigRequest) returns (Config);
	rpc CreateConfig (CreateConfigRequest) returns (Config);
	rpc UpdateConfig (UpdateConfigRequest) returns (Config);
	rpc DeleteConfig (DeleteConfigRequest) returns (google.protobuf.Empty);
}